src/assets/scss/styles.scss
@charset "UTF-8";

body {
    background-image: url("../photos/main_background.jpg");
}

.page-container {
    height: 92vh;
}

.landing-wrapper {
    height: 92vh;
    width: 100%;
    border: 0px;
    .landing-photo {
        margin-top: 8%;
        position: relative;
        display: block;
        width: 100%;
        height: auto;
        object-fit: cover;
        border: 5px solid #f5f5f5;
        overflow: hidden;
        display: flex;
        justify-content: center;
        align-items: center;
    }
    .landing-text-container {
        margin-top: 8%;
        background-color: #f5f5f5;
        padding: 30px;
        font-family: "Open Sans", sans-serif;
        font-weight: 600; //have 400 600 and 700
        font-size: 18px;
    }
}

.about-wrapper {
    height: 92vh;
    width: 100%;
    border: 0px;
    .about-photo {
        margin-top: 8%;
        position: relative;
        display: block;
        width: 90%;
        height: auto;
        object-fit: cover;
        border: 5px solid #f5f5f5;
        overflow: hidden;
        display: flex;
        justify-content: center;
        align-items: center;
    }
    .about-text-container {
        margin-top: 8%;
        background-color: #f5f5f5;
        padding: 30px;
        font-family: "Open Sans", sans-serif;
        font-weight: 600; //have 400 600 and 700
        font-size: 18px;
    }
    .text-header {
        font-family: "Open Sans", sans-serif;
        font-weight: 700; //have 400 600 and 700
        font-size: 24px;
        margin-bottom: 20px;
    }
}

.works-wrapper {
    height: 92vh;
    width: 100%;
    border: 0px;
    .works-text-container {
        margin-top: 8%;
        background-color: #f5f5f5;
        padding: 30px;
        font-family: "Open Sans", sans-serif;
        font-weight: 600; //have 400 600 and 700
        font-size: 18px;
        height: 60vh;
    }
    .text-header {
        font-family: "Open Sans", sans-serif;
        font-weight: 700; //have 400 600 and 700
        font-size: 24px;
        margin-bottom: 20px;
    }
    .entry {
        padding-bottom: 10px;
    }
    a:focus {
        outline: none !important;
        font-size: 18px !important;
    }
}

.contact-wrapper {
    height: 92vh;
    width: 100%;
    border: 0px;
    .contact-text-container {
        margin-top: 8%;
        background-color: #f5f5f5;
        padding: 30px;
        font-family: "Open Sans", sans-serif;
        font-weight: 600; //have 400 600 and 700
        font-size: 18px;
        height: 60vh;
    }
    .text-header {
        font-family: "Open Sans", sans-serif;
        font-weight: 700; //have 400 600 and 700
        font-size: 24px;
        margin-bottom: 20px;
    }
    .top-text {
        padding-bottom: 20px;
    }
    .bottom-text {
        padding-top: 20px;
    }
    a:focus {
        outline: none !important;
        font-size: 18px !important;
    }
}

//sidebar css

.side-bar {
    margin-top: 20%;
}

a:focus {
    outline: none !important;
    font-size: 24px;
}

.landing {
    margin-bottom: 15px;
}

.nav-link {
    color: #f5f5f5 !important;
    font-size: 18px;
    font-family: "Open Sans", sans-serif;
    font-weight: 600; //have 400 600 and 700
    margin-bottom: 10px;
}

.nav-pills .nav-link.active {
    background-color: transparent;
    color: #f5f5f5 !important;
}

//bottom icon row css

.icon-row {
    justify-content: flex-end;
    margin-right: 20px;
}

.contact-icon {
    width: 32px;
    height: 32px;
    margin-right: 24px;
}

.content-row {
    height: 92%;
}

.icon-row > a {
    &:hover {
        opacity: 0.7;
        transition: all 0.3s ease;
    }
}

//text css

.highlight {
    color: #f08f7b;
}

.underline {
    text-decoration: underline;
}

